# app/Http/Resources/UsersResource.php
@@ -4,7 +4,7 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class UserResource extends JsonResource
+class UsersResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -27,18 +27,11 @@ class UserResource extends JsonResource
             "phone2"  => $this->phone2,
             "diagnosis"  => $this->diagnosis,
             "serial_number"  => $this->serial_number,
-            "specialty"  => $this->specialty,
-            "preferred_distributor"  => $this->preferred_distributor,
-            "doctor_code"  => $this->doctor_code,
             "buy"  => $this->buy,
             "governorate"  => GovernorateResource::make($this->governorate),
-            "call_center"  => CallCenterResource::make($this->callCenter),
             "created_at"  => $this->created_at->format('d/m/Y h:i A'),
         ];
-        if ($this->type == 1)
-        {
-            $data['doctor'] = UserResource::make($this->doctorRow);
-        }
+
         return $data;
     }
 }
